# trade_network

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  products.json  pyproject.toml  sellers.json
config/: .gitignore  settings.py  urls.py
products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py
sellers/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
sellers/migrations/: 0001_initial.py  0002_remove_seller_contacts_seller_city_seller_country_and_more.py  0003_alter_seller_products.py  0004_alter_seller_products_alter_seller_supplier.py  0005_alter_seller_debt.py  0006_remove_seller_trade_network_level_alter_seller_debt.py  0007_seller_trade_network_level.py  0008_remove_seller_trade_network_level.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py
