[tool.poetry]
name = "test-task-certification"
version = "0.1.0"
description = ""
authors = ["Александра <aleksandrasilina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
black = "^24.10.0"
isort = "^5.13.2"
ipython = "^8.29.0"
pillow = "^11.0.0"
flake8 = "^7.1.1"
django-countries = "^7.6.1"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
